# obs-studio

plugins/win-capture/: CMakeLists.txt  audio-capture.c  audio-helpers.cpp  audio-helpers.h  audio-hook-info.h  plugin-main.c
plugins/win-capture/audio-hook/: CMakeLists.txt  audio-hook.c  core-audio-capture.cpp  core-audio-capture.h
plugins/win-capture/data/locale/: en-US.ini
